2010-05-10  Ross Younger  <wry@ecoscentric.com>

	* include/string.h: Declare strnlen.
	* include/stringsupp.hxx: Declare __strnlen.
	* src/strnlen.cxx, tests/strnlen.c: Created.
	* cdl/string.cdl (CYGFUN_LIBC_STRING_GNU_STRNLEN): New option,
	compiles strnlen.cxx.
	(CYGPKG_LIBC_STRING_TESTS): Add strnlen test.

2009-01-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/memchr.c (main): Rename to cyg_user_start if main isn't
	going to be called.
	* tests/memcmp1.c (main): Ditto.
	* tests/memcmp2.c (main): Ditto.
	* tests/memcpy1.c (main): Ditto.
	* tests/memcpy2.c (main): Ditto.
	* tests/memmove1.c (main): Ditto.
	* tests/memmove2.c (main): Ditto.
	* tests/memset.c (main): Ditto.
        * tests/strcat1.c (main): Ditto.
        * tests/strcat2.c (main): Ditto.
        * tests/strchr.c (main): Ditto.
        * tests/strcmp1.c (main): Ditto.
        * tests/strcmp2.c (main): Ditto.
        * tests/strcoll1.c (main): Ditto.
        * tests/strcoll2.c (main): Ditto.
        * tests/strcpy1.c (main): Ditto.
        * tests/strcpy2.c (main): Ditto.
        * tests/strcspn.c (main): Ditto.
        * tests/strlen.c (main): Ditto.
        * tests/strncat1.c (main): Ditto.
        * tests/strncat2.c (main): Ditto.
        * tests/strncpy1.c (main): Ditto.
        * tests/strncpy2.c (main): Ditto.
        * tests/strpbrk.c (main): Ditto.
        * tests/strrchr.c (main): Ditto.
        * tests/strspn.c (main): Ditto.
        * tests/strstr.c (main): Ditto.
        * tests/strtok.c (main): Ditto.
        * tests/strxfrm1.c (main): Ditto.
        * tests/strxfrm2.c (main): Ditto.

2005-07-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/strcmp.cxx (__strcmp): Set retval to zero to avoid compiler
	warnings.

2004-02-20  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/string.h: Prototype strdup().
	* include/stringsupp.hxx: Prototype __strdup().
	externC -> __externC while I'm here.
	* src/strdup.cxx: New file implementing strdup()/__strdup().